// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAI reasoning e2e test > should be successful with structured_output 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "actualData": {
      "description": "a valid sample date",
      "format": "date-time",
      "type": "string",
      "x-date": true,
    },
    "arrayMax": {
      "description": "any valid sample array of strings with a maximum of 5 strings",
      "items": {
        "type": "string",
      },
      "maxItems": 5,
      "type": "array",
    },
    "arrayMin": {
      "description": "any valid sample array of strings with a minimum of 1 string",
      "items": {
        "type": "string",
      },
      "minItems": 1,
      "type": "array",
    },
    "date": {
      "description": "a valid sample date",
      "format": "date-time",
      "type": "string",
      "x-date": false,
    },
    "dateAfter": {
      "description": "a valid sample date after 2024-01-01",
      "format": "date-time",
      "type": "string",
      "x-date": false,
    },
    "dateBefore": {
      "description": "a valid sample date before today",
      "format": "date-time",
      "type": "string",
      "x-date": false,
    },
    "default": {
      "default": "test",
      "description": "sample text that is the default value",
      "type": "string",
    },
    "enum": {
      "description": "The letter A, B, or C",
      "enum": [
        "A",
        "B",
        "C",
      ],
      "type": "string",
    },
    "exampleArray": {
      "description": "any valid array of example strings",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "nativeEnum": {
      "description": "The letter A, B, or C",
      "enum": [
        "A",
        "B",
        "C",
      ],
      "type": "string",
    },
    "nullable": {
      "description": "leave this field empty (null value) as an example of a nullable field",
      "type": [
        "string",
        "null",
      ],
    },
    "number": {
      "description": "any valid sample number",
      "type": "number",
    },
    "numberGt": {
      "description": "any valid sample number greater than 3",
      "exclusiveMinimum": 3,
      "type": "number",
    },
    "numberGte": {
      "description": "any valid sample number greater than or equal to 1",
      "minimum": 1,
      "type": "number",
    },
    "numberInt": {
      "description": "any valid sample number that is an integer",
      "maximum": 9007199254740991,
      "minimum": -9007199254740991,
      "type": "integer",
    },
    "numberLt": {
      "description": "any valid sample number less than 6",
      "exclusiveMaximum": 6,
      "type": "number",
    },
    "numberLte": {
      "description": "any valid sample number less than or equal to 1",
      "maximum": 1,
      "type": "number",
    },
    "numberMultipleOf": {
      "description": "any valid sample number that is a multiple of 2",
      "multipleOf": 2,
      "type": "number",
    },
    "object": {
      "additionalProperties": false,
      "description": "any valid sample object with a string and a number",
      "properties": {
        "bar": {
          "type": "number",
        },
        "foo": {
          "type": "string",
        },
      },
      "required": [
        "foo",
        "bar",
      ],
      "type": "object",
    },
    "objectLoose": {
      "additionalProperties": false,
      "description": "any sample object with example keys and data",
      "properties": {},
      "required": [],
      "type": "object",
    },
    "objectNested": {
      "additionalProperties": false,
      "description": "any valid sample data",
      "properties": {
        "user": {
          "additionalProperties": false,
          "properties": {
            "age": {
              "minimum": 18,
              "type": "number",
            },
            "name": {
              "minLength": 2,
              "type": "string",
            },
          },
          "required": [
            "name",
            "age",
          ],
          "type": "object",
        },
      },
      "required": [
        "user",
      ],
      "type": "object",
    },
    "objectPassthrough": {
      "additionalProperties": false,
      "description": "any sample object with example keys and data",
      "properties": {},
      "required": [],
      "type": "object",
    },
    "optional": {
      "anyOf": [
        {
          "description": "leave this field empty (undefined value) as an example of an optional field",
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
      "description": "leave this field empty (undefined value) as an example of an optional field",
    },
    "string": {
      "description": "Sample text",
      "type": "string",
    },
    "stringCuid": {
      "description": "a valid sample cuid",
      "type": "string",
    },
    "stringEmail": {
      "description": "a sample email address",
      "format": "email",
      "pattern": "^(?:[A-Za-z0-9_'+\\-]+\\.)*[A-Za-z0-9_'+\\-]*[A-Za-z0-9_+-]@(?:[A-Za-z0-9][A-Za-z0-9\\-]*\\.)+[A-Za-z]{2,}$",
      "type": "string",
    },
    "stringEmoji": {
      "description": "a valid sample emoji",
      "type": "string",
    },
    "stringMax": {
      "description": "sample text with a maximum of 10 characters",
      "maxLength": 10,
      "type": "string",
    },
    "stringMin": {
      "description": "sample text with a minimum of 5 characters",
      "minLength": 5,
      "type": "string",
    },
    "stringRegex": {
      "description": "a valid sample string that satisfies the regex",
      "pattern": "^test-",
      "type": "string",
    },
    "stringUrl": {
      "description": "a valid sample url",
      "type": "string",
    },
    "stringUuid": {
      "description": "a valid sample uuid",
      "format": "uuid",
      "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
      "type": "string",
    },
    "unionObjects": {
      "anyOf": [
        {
          "additionalProperties": false,
          "properties": {
            "amount": {
              "type": "number",
            },
            "inventoryItemName": {
              "type": "string",
            },
          },
          "required": [
            "amount",
            "inventoryItemName",
          ],
          "type": "object",
        },
        {
          "additionalProperties": false,
          "properties": {
            "permissions": {
              "items": {
                "type": "string",
              },
              "type": "array",
            },
            "type": {
              "type": "string",
            },
          },
          "required": [
            "type",
            "permissions",
          ],
          "type": "object",
        },
      ],
      "description": "give an valid object",
    },
    "unionPrimitives": {
      "description": "sample text or number",
      "type": [
        "string",
        "number",
      ],
    },
  },
  "required": [
    "string",
    "stringMin",
    "stringMax",
    "stringEmail",
    "stringEmoji",
    "stringUrl",
    "stringUuid",
    "stringCuid",
    "stringRegex",
    "number",
    "numberGt",
    "numberLt",
    "numberGte",
    "numberLte",
    "numberMultipleOf",
    "numberInt",
    "exampleArray",
    "arrayMin",
    "arrayMax",
    "date",
    "dateAfter",
    "dateBefore",
    "actualData",
    "object",
    "objectNested",
    "objectPassthrough",
    "objectLoose",
    "nullable",
    "enum",
    "nativeEnum",
    "unionPrimitives",
    "unionObjects",
    "default",
    "optional",
  ],
  "type": "object",
  "x-optional": [
    "optional",
  ],
}
`;

exports[`OpenAI reasoning e2e test > should be successful with structured_output 2`] = `
{
  "value": {
    "actualData": 2026-10-09T12:34:56.000Z,
    "arrayMax": [
      "a",
      "b",
      "c",
      "d",
      "e",
    ],
    "arrayMin": [
      "one",
    ],
    "date": 2025-01-01T00:00:00.000Z,
    "dateAfter": 2025-06-15T00:00:00.000Z,
    "dateBefore": 2026-01-01T00:00:00.000Z,
    "default": "",
    "enum": "B",
    "exampleArray": [
      "foo",
      "bar",
    ],
    "nativeEnum": "C",
    "nullable": null,
    "number": 42.5,
    "numberGt": 4,
    "numberGte": 1,
    "numberInt": 7,
    "numberLt": 5,
    "numberLte": 1,
    "numberMultipleOf": 10,
    "object": {
      "bar": 123,
      "foo": "baz",
    },
    "objectLoose": {},
    "objectNested": {
      "user": {
        "age": 30,
        "name": "Alice",
      },
    },
    "objectPassthrough": {},
    "optional": undefined,
    "string": "Hello, world!",
    "stringCuid": "cjld2cj210000ud087jimayyr",
    "stringEmail": "user@example.com",
    "stringEmoji": "😄",
    "stringMax": "TenChars!!",
    "stringMin": "Sample",
    "stringRegex": "test-123",
    "stringUrl": "https://example.com",
    "stringUuid": "123e4567-e89b-12d3-a456-426614174000",
    "unionObjects": {
      "permissions": [
        "read",
        "write",
      ],
      "type": "admin",
    },
    "unionPrimitives": "mixed",
  },
}
`;

exports[`OpenAI reasoning e2e test > should handle tool call with manySchemas input 1`] = `
{
  "value": {
    "actualData": 2024-05-20T08:30:00.000Z,
    "arrayMax": [
      "a",
      "b",
      "c",
    ],
    "arrayMin": [
      "item1",
    ],
    "date": 2024-06-01T12:00:00.000Z,
    "dateAfter": 2024-02-01T00:00:00.000Z,
    "dateBefore": 2023-12-31T23:59:59.000Z,
    "default": "test",
    "enum": "B",
    "exampleArray": [
      "one",
      "two",
    ],
    "nativeEnum": "C",
    "nullable": null,
    "number": 42,
    "numberGt": 4,
    "numberGte": 1,
    "numberInt": 123,
    "numberLt": 5,
    "numberLte": 1,
    "numberMultipleOf": 10,
    "object": {
      "bar": 123,
      "foo": "fooValue",
    },
    "objectLoose": {},
    "objectNested": {
      "user": {
        "age": 30,
        "name": "John",
      },
    },
    "objectPassthrough": {},
    "optional": undefined,
    "string": "Hello world",
    "stringCuid": "cjo3s5u990000079fiazij5n2",
    "stringEmail": "user@example.com",
    "stringEmoji": "😀",
    "stringMax": "TestMax",
    "stringMin": "Hello",
    "stringRegex": "test-sample",
    "stringUrl": "https://example.com",
    "stringUuid": "123e4567-e89b-12d3-a456-426614174000",
    "unionObjects": {
      "amount": 100,
      "inventoryItemName": "widget",
    },
    "unionPrimitives": "unionString",
  },
}
`;

exports[`OpenAI reasoning e2e test > should handle tool call with manySchemas input and output 1`] = `
"Here is the validated output returned by manySchemasTool:

{
  "string": "hello",
  "stringMin": "abcde",
  "stringMax": "abcdefghij",
  "stringEmail": "user@example.com",
  "stringEmoji": "😊",
  "stringUrl": "https://example.com",
  "stringUuid": "123e4567-e89b-12d3-a456-426614174000",
  "stringCuid": "ck6jrbgzv0000hwq09x0tn2ie",
  "stringRegex": "test-case",
  "number": 42.5,
  "numberGt": 4,
  "numberLt": 5,
  "numberGte": 1,
  "numberLte": 1,
  "numberMultipleOf": 4,
  "numberInt": 7,
  "exampleArray": [
    "one",
    "two"
  ],
  "arrayMin": [
    "only"
  ],
  "arrayMax": [
    "a",
    "b",
    "c"
  ],
  "date": "2025-06-01T12:00:00.000Z",
  "dateAfter": "2024-06-01T00:00:00.000Z",
  "dateBefore": "2025-01-01T00:00:00.000Z",
  "actualData": "2026-10-09T00:00:00.000Z",
  "object": {
    "foo": "bar",
    "bar": 123
  },
  "objectNested": {
    "user": {
      "name": "John",
      "age": 30
    }
  },
  "objectPassthrough": {},
  "objectLoose": {},
  "nullable": null,
  "enum": "B",
  "nativeEnum": "C",
  "unionPrimitives": "stringValue",
  "unionObjects": {
    "amount": 10,
    "inventoryItemName": "item1"
  },
  "default": "test"
}"
`;
